# fluffly_mart

./: README.md  package-lock.json  pyproject.toml  start.sh
core/: settings.py  urls.py
finance/: urls.py  views.py
order/: urls.py  views.py
page/: urls.py  views.py
product/: urls.py  views.py
templates/finance/: pay.html  refund_invoice.html
templates/order/: index.html  order.html  order_search.html  refund.html  refund_search.html  search.html  shipping.html  status.html
templates/page/: base.html  root.html
templates/product/: custom_selected.html  index.html  inventory.html  search.html  selected.html
templates/shared/: navbar.html  sidebar.html
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
theme/static_src/src/scripts/: app.js
theme/static_src/static/scripts/: app.js
