[tool.poetry]
name = "flufflymart"
version = "0.1.0"
description = ""
authors = ["Adoraxuu <adoraxu01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pip = "^24.1.1"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
